# face-detection-tflite

./: pyproject.toml
fdlite/: __init__.py  iris_landmark.py  transform.py  types.py
fdlite/examples/: iris_recoloring.py
